--- a/test/fixtures/relationships.yml
+++ b/test/fixtures/relationships.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  follower: 
-  followed: 
+  follower_id: 1
+  followed_id: 1
 
 two:
-  follower: 
-  followed: 
+  follower_id: 1
+  followed_id: 1
